<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:context="com.denisroyz.geofence.ui.geofence.GeofenceActivity">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/geofence_status_lay"
            card_view:cardUseCompatPadding="true"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:contentPadding="8dp"
            card_view:cardElevation="2dp"
            card_view:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ToggleButton
                    android:id="@+id/geofence_sensors_toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sensors_enabled" />
                <TextView
                    android:layout_margin="6dp"
                    android:id="@+id/status_text_view"
                    android:layout_width="match_parent"
                    android:text="@string/not_initialized"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/geofence_permission_lay"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardUseCompatPadding="true"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:contentPadding="8dp"
            card_view:cardElevation="2dp"
            card_view:cardCornerRadius="4dp">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/location_permission_is_not_granted"
                android:textColor="@color/warning"
                android:gravity="center_vertical"
                android:id="@+id/permission_text_view"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            card_view:cardUseCompatPadding="true"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:contentPadding="8dp"
            card_view:cardElevation="2dp"
            card_view:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="match_parent"
                    android:id="@+id/geofence_configuration_save_button"
                    android:enabled="true"
                    android:text="@string/geofence_configuration_save"
                    android:layout_height="wrap_content" />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/wifi_network_name"
                        android:id="@+id/geofence_configuration_wifi_name_et"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/latitude"
                        android:id="@+id/geofence_configuration_gps_lat"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/longitude"
                        android:id="@+id/geofence_configuration_gps_lon"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/radius"
                        android:id="@+id/geofence_configuration_gps_radius"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
